chore: simplify tracked entities store query generation
set the alias in the subquery as we do in event. Reuse that in the orderable fields
value